--- a/app/src/main/res/layout/item_tweets.xml
+++ b/app/src/main/res/layout/item_tweets.xml
@@ -44,12 +44,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginRight="30dp"
         android:layout_toEndOf="@+id/tvScreenName"
         android:layout_toRightOf="@+id/tvScreenName"
         android:text="@string/username"
         android:textColorLink="@android:color/darker_gray"
-        android:textSize="16sp"
-        android:layout_marginRight="30dp"/>
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvTimeStamp"
