Setup character counter, pull down to refresh, tweet links

--- a/app/src/main/res/layout/item_tweets.xml
+++ b/app/src/main/res/layout/item_tweets.xml
@@ -37,7 +37,10 @@
         android:layout_toRightOf="@+id/ivProfileImage"
         android:text="Body"
         android:textColor="?android:attr/textColorPrimary"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:autoLink="all"
+        android:linksClickable="true"
+        />
 
     <TextView
         android:id="@+id/tvUserName"
