--- a/app/src/main/res/layout/item_tweets.xml
+++ b/app/src/main/res/layout/item_tweets.xml
@@ -66,4 +66,13 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="10dp"/>
 
+    <ImageView
+        android:id="@+id/ivImageUrl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvBody"
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:layout_toRightOf="@+id/ivProfileImage"
+        app:srcCompat="@drawable/twitter_logo" />
+
 </RelativeLayout>
