--- a/app/src/main/res/layout/item_tweets_no_image.xml
+++ b/app/src/main/res/layout/item_tweets_no_image.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/ivProfileImage"
@@ -38,8 +38,9 @@
         android:text="Body"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="16sp"
-        android:autoLink="all"
-        android:linksClickable="true" />
+        android:autoLink="web"
+        android:linksClickable="true"
+        />
 
     <TextView
         android:id="@+id/tvUserName"
@@ -64,14 +65,5 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="10dp"/>
-
-    <ImageView
-        android:id="@+id/ivImageUrl"
-        android:layout_width="600dp"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/twitter_logo"
-        android:layout_below="@+id/tvBody"
-        android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_toEndOf="@+id/ivProfileImage" />
 
 </RelativeLayout>
