--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -9,4 +9,13 @@
         android:title="Compose">
     </item>
 
+    <item
+        android:id="@+id/miProfile"
+        android:icon="@drawable/ic_profile"
+        android:onClick="onProfileView"
+        app:showAsAction="ifRoom"
+        android:title="Profile">
+    </item>
+
+
 </menu>
